--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Introduction to R and BioConductor 
+title: Introduction to R and Bioconductor 
 google_analytics: 
